--- a/style.css
+++ b/style.css
@@ -21,7 +21,15 @@ body {
     border-radius: 15px;
     border-top: 1px solid rgb(125, 125, 125);
     border-left: 1px solid rgb(125, 125, 125);
+    box-shadow: 0 0 7px rgba(18, 18, 18, 0.5);
+    transition: box-shadow 0.3s ease-out;
 }
+
+.card:hover {
+    box-shadow: 0 0 13px rgba(18, 18, 18, 0.8);
+
+}
+
 .card .content {
     display: flex;
     flex-direction: column;
